# OPLHost

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: catalog.rs  compat.rs  domain.rs  game_id.rs  game_info.rs  iso9660.rs  lib.rs  meta.rs  opl_layout.rs  ports.rs  settings.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: art.rs  dialog.rs  firewall.rs  fs_game_info_store.rs  fs_settings_store.rs  iso.rs  lib.rs  meta_store.rs  net.rs  privilege.rs  real_fs.rs  scan.rs  smb_backend.rs  smb_script.rs  test_util.rs  udpbd_backend.rs  udpbd_script.rs
crates/ui/: Cargo.toml  build.rs
crates/ui/i18n/: en-US.ftl  pt-BR.ftl
crates/ui/i18n/pt-BR/LC_MESSAGES/: oplhost.po
crates/ui/packaging/: changelog  oplhost.desktop  postinst
crates/ui/src/: app_config.rs  catalog_view.rs  dir_hint.rs  handlers.rs  i18n.rs  jobs.rs  main.rs  ui_update.rs
crates/ui/ui/: app.slint
plans/: PLANS_TEMPLATE.md  README.md  fase-0-spike.md  fase-1-nucleo.md  fase-2-biblioteca.md  fase-3-compatibilidade.md  fase-3-editor-metadados.md  fase-3-i18n.md  fase-3-persistencia-ui.md  fase-3-udpbd-backend.md  roteiro-teste-manual-share.md
spike/: Cargo.toml
spike/src/: main.rs
