# Projeto DESCARTÁVEL da Fase 0 (spike). Excluído do workspace principal.
# Objetivo único: provar que o OPL conecta via SMBv1 (NT1). Será removido
# após a confirmação do teste com PS2 real. Não adicionar arquitetura aqui.
[package]
name = "oplhost-spike"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
