[package]
name = "oplhost-infra"
version = "0.1.0"
edition = "2024"

# infrastructure implementa os ports do core com adapters reais (filesystem,
# backend SMB, firewall, Polkit, persistência). Depende de core; core nunca
# depende daqui.
[dependencies]
oplhost-core = { path = "../core" }
# Persistência do opl_meta.json (MetaStore). A elevação de privilégio usa
# `pkexec` (já presente com o Polkit do sistema), então `zbus` não é necessário
# nesta fase — fica para um caminho D-Bus direto se vier a ser preciso.
serde_json = "1"
