[package]
name = "oplhost"
version = "0.1.0-alpha.1"
edition = "2024"
description = "Servidor SMB dedicado ao Open PS2 Loader (OPL) para Linux"
license = "MIT"
authors = ["Maicom Ferreira <maicomferre3242@gmail.com>"]

# Binário principal. A UI (Slint) consome o core via mensagens/callbacks e
# nunca acessa a infrastructure diretamente. Mantida desacoplada o suficiente
# para a eventual troca Slint -> egui não tocar o core.
[[bin]]
name = "oplhost"
path = "src/main.rs"

[dependencies]
oplhost-core = { path = "../core" }
oplhost-infra = { path = "../infrastructure" }
slint = "1"

[build-dependencies]
slint-build = "1"

# Empacotamento .deb (V1, §9). Gerar com `cargo deb -p oplhost` (requer o
# cargo-deb instalado). `$auto` detecta as libs dinâmicas (libc, libfontconfig do
# renderer Slint, etc.); somam-se os executáveis de runtime que não são libs
# linkadas: samba (smbd), pkexec/polkit (escala privilégio) e zenity|kdialog
# (seletor de pasta). O postinst reconfirma e orienta. Build-dep: libfontconfig-dev.
[package.metadata.deb]
section = "utils"
priority = "optional"
depends = "$auto, samba, pkexec | policykit-1, zenity | kdialog"
extended-description = """\
Aplicação gráfica que automatiza a criação e o gerenciamento de um servidor \
Samba (SMB) dedicado ao Open PS2 Loader (OPL). O OPL só conecta via SMBv1 (NT1), \
desabilitado por padrão no Samba moderno; o oplhost reabilita esse protocolo num \
share isolado e revertível, configura o firewall e escala privilégio via Polkit, \
eliminando a configuração manual no Linux."""
changelog = "packaging/changelog"
maintainer-scripts = "packaging/"
assets = [
    ["target/release/oplhost", "usr/bin/", "755"],
    ["packaging/oplhost.desktop", "usr/share/applications/", "644"],
]
